# haskell_learning

./: Ad-hoc_Polymorphism.hs  Example.hi  Example2.hs  Example4.hs  Example7.hs  Functor,Applicative,Monad.md  Language.hs  Main  Main.hi  Main.hs  Main1  Main1.hi  Main1.hs  Multiple.hs  My.hs  MyEq.hs  Otherwise.hs  PatternOnList.hs  Polymorphic_type.hs  Polymorphsim.hs  ProductType.hs  ProductType_Record.hs  ReadME.md  StructuralListPattern.hs  hello  hello.hi
articles/: Functor,Applicative,Monad.md
codes/: Common_type.hs  Composition.hs  CountExample.hs  Function.hs  IO.hs  IfThenElse.hs  Monad.hs  PatternAndCaseof.hs  ProductType.hs  StrictEvaluation.hs  StructuralListPattern.hs  SumType.hs  Totality.hs  Tuple.hs  hello.hs
website/: car_shop.cabal  readme.md
website/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
website/src/: main.hs
website/src/domain/: car.hs
website/src/infra/: db.hs
