Name:                scotty-examples
Version:             0.1
Synopsis:            scotty examples
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <xichekolas@gmail.com>
Maintainer:          Andrew Farmer <xichekolas@gmail.com>
Copyright:           (c) 2012-Present, Andrew Farmer and the Scotty contributors
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:         Example programs using @scotty@
tested-with:         GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.6
                   , GHC == 9.6.2

executable CarShop
  main-is:             main.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.6 && < 5,
                       aeson,    
                       http-types,
                       mtl,
                       random,
                       scotty == 0.20.1,
                       text,
                       wai-extra,
                       sqlite-simple,
                       transformers,
                       wai-cors
  GHC-options:         -Wall -threaded
